@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_api.h,v 1.12 2005-05-05 16:26:56 achu Exp $
+ *  $Id: cerebro_api.h,v 1.13 2005-05-11 21:49:02 achu Exp $
 \*****************************************************************************/
  
 #ifndef _CEREBRO_API_H
@@ -9,13 +9,16 @@
 
 #include "cerebro/cerebro_config.h"
 
+#include "hostlist.h"
+
 /* 
  * CEREBRO_MAGIC_NUMBER
  *
  * Magic number for cerebro handle
  */
-#define CEREBRO_MAGIC_NUMBER 0xF00F1234
-
+#define CEREBRO_MAGIC_NUMBER                0xF00F1234
+#define CEREBRO_NODES_ITERATOR_MAGIC_NUMBER 0xF00F2345
+#define CEREBRO_UPDOWN_MAGIC_NUMBER         0xF00F3456
 /* 
  * Cerebro loaded state flags
  */
@@ -35,6 +38,17 @@ struct cerebro {
   int32_t loaded_state;
   struct cerebro_config config_data;
   void *updown_data;
+};
+
+/* 
+ * struct cerebro_nodes_iterator
+ *
+ * Used for interator interface
+ */
+struct cerebro_nodes_iterator {
+  int32_t magic;
+  hostlist_iterator_t nodesitr;
+  hostlist_t nodes;
 };
 
 #endif /* _CEREBRO_API_H */
